controller and endpoint updates